--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,9 @@
     "linebreak-style": "off",
     "indent": "off",
     "require-jsdoc": "off",
-    "eol-last": "off"
+    "eol-last": "off",
+    "no-console": "off",
+    "properties": true
   },
   "extends": [
     "eslint:recommended",
