--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,10 @@
     "require-jsdoc": "off",
     "eol-last": "off",
     "no-console": "off",
-    "properties": true
+    "properties": true,
+    "operator-linebreak": "off",
+    "no-trailing-spaces": "off",
+    "padded-blocks": "off"
   },
   "extends": [
     "eslint:recommended",
